Added corporate event planner

--- a/corporate.html
+++ b/corporate.html
@@ -95,6 +95,9 @@
             <p>Share requirements like <i>Colors/theme/text on balloons...</i> </p>
             <p>We Customise everything starting from <i>Balloon bouquets</i> to <i>Balloon walls</i> with company theme
                 color and patterns</p>
+            <br>
+            <a href="corporateeventplanner.html" style="color: black;">PLAN ahead for future events</a>
+            <br><br>
             <a href="contact.html"><b style="color: black;">Enquire and book soon...</b></a>
         </div>
     </div>
