--- a/budgetform.html
+++ b/budgetform.html
@@ -69,8 +69,6 @@
 </head>
 
 <body>
-    <script src="./script.js"></script>
-    <script src="./corporate.js"></script>
 
     <div class="formcard">
         <form id="personalForm">
@@ -145,7 +143,7 @@
 
     <br><br>
     <br><br>
-    
+
     <div class="formcard">
         <form id="corporateForm">
             <h1>Corporate Event Planner</h1>
@@ -214,11 +212,14 @@
         <h4>Your list of Corporate Plans</h4>
         <div id="corporatetable"></div>
         <br><br>
-        <button onclick="getFormData()" type="button">Click to see Your Plans</button>
+        <button onclick="getCorporateFormData()" type="button">Click to see Your Plans</button>
         <br><br>
         <br><br>
         <br><br>
     </div>
+
+    <script src="./script.js"></script>
+    <script src="./corporate.js"></script>
 </body>
 
 </html>
