--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-
     <style>
         table {
             border-collapse: collapse;
@@ -73,23 +72,10 @@
             font-size: 40px;
             color: black;
         }
-
-        .footer {
-            border-radius: 4px;
-            height: 150px;
-            width: inherit;
-            background-color: #625B71;
-        }
-
-        .footericon {
-            margin: 20px 20px 20px 20px;
-        }
     </style>
 </head>
 
 <body>
-    <script src="./script.js"></script>
-    <script src="./corporate.js"></script>
 
     <a href="corporate.html" style="color:black;">
         <span style="color:black; margin-left: 20px; margin-top: 20px; font-size:30px;cursor:pointer;">&#9664;
@@ -100,7 +86,6 @@
 
     <div class="formcard">
         <form id="corporateForm">
-
             <label for="plan no">Plan No:</label>
             <input type="number" id="plan no" name="plan no" placeholder="Enter Plan Number">
             <br><br>
@@ -156,7 +141,6 @@
             </select>
             <br><br>
 
-
             <input type="reset">
             <button type="submit">Submit</button>
         </form>
@@ -164,14 +148,15 @@
 
     <div class="planCard">
         <h4>Your list of Corporate Plans</h4>
-        <br>
         <div id="corporatetable"></div>
         <br><br>
-        <button onclick="getFormData()" type="button">Click to see Your Plans</button>
+        <button onclick="getCorporateFormData()" type="button">Click to see Your Plans</button>
+        <br><br>
+        <br><br>
         <br><br>
     </div>
-    <br><br>
+    <script src="./script.js"></script>
+    <script src="./corporate.js"></script>
 </body>
 
 </html>
-
