--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -150,12 +150,14 @@
         <h4>Your list of Corporate Plans</h4>
         <div id="corporatetable"></div>
         <br><br>
+        <p>You can send your plan in contact form</p>
+        <br><br>
         <button onclick="getCorporateFormData()" type="button">Click to see Your Plans</button>
         <br><br>
-        <br><br>
+
         <br><br>
     </div>
-    <script src="./script.js"></script>
+
     <script src="./corporate.js"></script>
 </body>
 
