--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Cloud 9</title>
+    <meta charset="UTF-8">
     <!-- Included  stylesheets to maintain same header and navigation style in most of the webpages  -->
     <link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
