--- a/upcoming.html
+++ b/upcoming.html
@@ -189,7 +189,7 @@
                     <p>Balloons.. Balloons...</p>
                     <p>Order Special Balloon Bouquets Soon...</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#128151;</a>
                 </div>
             </div>
             <div class="container right">
@@ -197,7 +197,8 @@
                     <h2>Mothers Day</h2>
                     <p>Surprise her with lovely balloon boquets</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#129329;</a>
                 </div>
             </div>
             <div class="container left">
@@ -205,7 +206,7 @@
                     <h2>Fathers Day</h2>
                     <p>Surprise him with lovely balloon boquets</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#129492;</a>
                 </div>
             </div>
             <div class="container right">
@@ -213,7 +214,7 @@
                     <h2>Graduation Day</h2>
                     <p>Think about gifting customised graduation cap balloons for your loved ones</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#127891;</a>
                 </div>
             </div>
             <div class="container left">
@@ -222,7 +223,7 @@
                     <p>Gift Balloon Bouquets</p>
                     <p>Think about Balloon wall decoration for your loved ones</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#128525;</a>
                 </div>
             </div>
             <div class="container right">
@@ -230,7 +231,7 @@
                     <h2>Anniversary</h2>
                     <p>Celebrate any anniversary with lovely balloons</p>
                     <br>
-                    <a href="budgetform.html">PLAN NOW</a>
+                    <a style="font-size:24px" href="personalpartyplanner.html">PLAN NOW &#128525;</a>
                 </div>
             </div>
         </div>
