--- a/corporate.html
+++ b/corporate.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
     <title>Cloud 9</title>
