--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
     <style>
         table {
             border-collapse: collapse;
@@ -66,14 +65,27 @@
             justify-content: start;
             align-items: center;
         }
+
+        h1 {
+            font-family: 'roca-one-light', fantasy;
+            text-align: center;
+            font-size: 40px;
+            color: black;
+        }
     </style>
 </head>
 
 <body>
 
+    <a href="corporate.html" style="color:black;">
+        <span style="color:black; margin-left: 20px; margin-top: 20px; font-size:30px;cursor:pointer;">&#9664;
+            Back</span>
+    </a>
+
+    <h1>Personal Event Planner</h1>
+
     <div class="formcard">
         <form id="personalForm">
-            <h1>Personal party Planner</h1>
             <label for="plan no">Plan No:</label>
             <input type="number" id="plan no" name="plan no" placeholder="Enter Plan Number">
             <br><br>
@@ -126,7 +138,6 @@
             </select>
             <br><br>
 
-
             <input type="reset">
             <button type="submit">Submit</button>
         </form>
@@ -136,91 +147,15 @@
         <h4>Your list of Personal Plans</h4>
         <div id="personaltable"></div>
         <br><br>
+        <p>You can send your plan in contact form</p>
+        <br><br>
         <button onclick="getPersonalFormData()" type="button">Click to see Your Plans</button>
         <br><br>
         <br><br>
         <br><br>
     </div>
 
-    <br><br>
-    <br><br>
-
-    <div class="formcard">
-        <form id="corporateForm">
-            <h1>Corporate Event Planner</h1>
-            <label for="plan no">Plan No:</label>
-            <input type="number" id="plan no" name="plan no" placeholder="Enter Plan Number">
-            <br><br>
-
-            <label for="sponsor">Sponsor Name:</label>
-            <input type="text" id="sponsor" name="sponsor" placeholder="Enter Sponsor name">
-            <br><br>
-
-            <label for="companyname">Company Name:</label>
-            <input type="text" id="companyname" name="companyname" placeholder="Enter Company name">
-            <br><br>
-
-            <label for="sponsoremail">Sponsor Email:</label>
-            <input type="email" id="sponsoremail" name="sponsoremail">
-            <br><br>
-
-            <label for="companyemail">Company Email:</label>
-            <input type="email" id="companyemail" name="companyemail">
-            <br><br>
-
-            <label for="occasion">Occasion:</label>
-            <input type="text" id="occasion" name="occasion">
-            <br><br>
-            <label for="occasiontime">Occasion time:</label>
-            <input id="occasiontime" name="occasiontime" type="time">
-            <br><br>
-
-            <label for="occasiondate">Occasion date:</label>
-            <input type="date" id="occasiondate" name="occasiondate">
-            <br><br>
-
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="location">
-            <br><br>
-
-            <p>Click on other interested Occasions to order with us?</p>
-
-            <input type="checkbox" id="officeparty" name="officeparty" value="Yes">
-            <label for="officeparty">Office Party</label><br>
-
-            <input type="checkbox" id="milestoneevents" name="milestoneevents" value="Yes">
-            <label for="milestoneevents">Milestone Events</label><br>
-
-            <input type="checkbox" id="achievements" name="achievements" value="Yes">
-            <label for="achievements">Achievements</label><br><br>
-
-            <label for="country">Country:</label>
-            <select name="country">
-                <option selected="" value="Default">(Please select a country)</option>
-                <option value="Ireland">Ireland</option>
-                <option value="NorthernIreland">Northern Ireland</option>
-                <option value="India">India</option>
-            </select>
-            <br><br>
-
-
-            <input type="reset">
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-
-    <div class="planCard">
-        <h4>Your list of Corporate Plans</h4>
-        <div id="corporatetable"></div>
-        <br><br>
-        <button onclick="getCorporateFormData()" type="button">Click to see Your Plans</button>
-        <br><br>
-        <br><br>
-        <br><br>
-    </div>
-
-    <script src="./script.js"></script>
-    <script src="./corporate.js"></script>
+    <script src="./personal.js"></script>
 </body>
 
 </html>
