javascript folder added and moved files and minor refactors

--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -158,7 +158,7 @@
         <br><br>
     </div>
 
-    <script src="./corporate.js"></script>
+    <script src="./javascript/corporate.js"></script>
 </body>
 
 </html>
