--- a/budgetform.html
+++ b/budgetform.html
@@ -219,8 +219,8 @@
         <br><br>
     </div>
 
-    <script src="./script.js"></script>
-    <script src="./corporate.js"></script>
+    <script src="./javascript/corporate.js"></script>
+    <script src="./javascript/personal.js"></script>
 </body>
 
 </html>
