--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -155,7 +155,7 @@
         <br><br>
     </div>
 
-    <script src="./personal.js"></script>
+    <script src="./javascript/personal.js"></script>
 </body>
 
 </html>
