Added validations for the HTML forms

--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+    <meta charset="utf-8" />
+    <title>Cloud 9</title>
     <style>
         table {
             border-collapse: collapse;
