--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         </a>
         <img class="indeximg" src="./images/a.png" alt="Avatar" width="250" height="300">
         <div class="introcard_items style=" color="#191919">
-            <h3 style="font-family:  cursive;"><b>Make your parties more awesome</b></h4>
-                <p>Turning dreams into plans and making them a reality</p>
+            <h3 style="font-family:  cursive;"><b> &#127881;BELIEVE IN US &#127881;</b></h4>
+                <p>We make your parties more awesome by turning your dreams into reality.</p>
         </div>
     </div>
 
@@ -162,7 +162,8 @@
             style="background-color:#f2efe3; background-image:none; justify-content: center; display: flex; flex-direction: row;">
             <div class="introcard_items" style="padding: 20%;">
                 <a href="corporate.html"><b
-                        style="color: #242424; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Corporate</b></a>
+                        style="color: #242424; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Corporate
+                        &#128072;</b></a>
             </div>
         </div>
 
@@ -170,7 +171,8 @@
             style="background-color:#f2efe3; background-image:none; justify-content: center; display: flex; flex-direction: row;">
             <div class="introcard_items" style="padding: 20%;">
                 <a href="rents.html"><b
-                        style="color: #242424; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Rental</b></a>
+                        style="color: #242424; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Rental
+                        &#128072;</b></a>
             </div>
         </div>
 
@@ -179,13 +181,13 @@
     <div class="introcard"
         style="background-color:#191919; background-image:none; justify-content: center; display: flex; flex-direction: row;">
         <div class="introcard_items" style="padding: 20%;">
-            <a href="upcoming.html"><b style="color: #9edde0;">Plan ahead for upcoming important dates</b></a>
+            <a href="upcoming.html"><b style="color: #9edde0;">PLAN YOUR FUTURE EVENTS &#128072;</b></a>
         </div>
     </div>
 
     <br />
 
-    <h2>Milestone Boquets</h2>
+    <h2>Milestone Boquets &#127881;</h2>
 
     <div class="services">
         <div class="servicecard" style="background-color:#9edde0; background-image:none;">
@@ -210,7 +212,7 @@
     <br />
 
     <!-- Custom Themes -->
-    <h2>Custom Party Themes</h2>
+    <h2>Custom Party Themes &#127881;</h2>
 
     <div class="services">
         <div class="servicecard" style="background-color: #A7ADB1; background-image:none;">
@@ -289,6 +291,8 @@
     </video>
     <br />
     <br />
+
+
     <footer class="footer">
         <div class="footercontent">
             <p style="color:white; padding:20px 0 0 40px">Contact us</p>
