--- a/corporate.html
+++ b/corporate.html
@@ -64,7 +64,6 @@
         </div>
     </header>
 
-
     <!--Navigation-->
     <div class="navbar">
         <a href="index.html">Home</a>
@@ -97,9 +96,10 @@
             <p>We Customise everything starting from <i>Balloon bouquets</i> to <i>Balloon walls</i> with company theme
                 color and patterns</p>
             <br>
-            <a href="corporateeventplanner.html" style="color: black;">PLAN ahead for future events</a>
+            <a href="corporateeventplanner.html" style="color: black;"> <i>PLAN AHEAD FOR FUTURE EVENTS &#128072;
+                    &#128072;</i></a>
             <br><br>
-            <a href="contact.html"><b style="color: black;">Enquire and book soon...</b></a>
+            <a href="contact.html"><b style="color: black;">Enquire and book soon... &#128072;</b></a>
         </div>
     </div>
     <br />
