--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -88,8 +88,8 @@
 
     <div class="formcard">
         <form id="personalForm">
-            <label for="plan no">Plan No:</label>
-            <input type="number" id="plan no" name="plan no" placeholder="Enter Plan Number">
+            <label for="planno">Plan No:</label>
+            <input type="number" id="planno" name="planno" placeholder="Enter Plan Number">
             <br><br>
 
             <label for="sponsor">Sponsor Name:</label>
@@ -100,8 +100,8 @@
             <input type="text" id="name" name="name" placeholder="To Whom?">
             <br><br>
 
-            <label for="email">Sponsor Email:</label>
-            <input type="email" id="email" name="email">
+            <label for="sponsoremail">Sponsor Email:</label>
+            <input type="email" id="sponsoremail" name="sponsoremail">
             <br><br>
 
             <label for="occasion">Occasion:</label>
@@ -109,7 +109,7 @@
             <br><br>
 
             <label for="date">Occasion date:</label>
-            <input type="date" id="date" name="date">
+            <input type="date" id="occasiondate" name="occasiondate">
             <br><br>
 
             <label for="occasiontime">Occasion time:</label>
