json bugs fixed

--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -126,13 +126,13 @@
 
             <p>Click on other interested Occasions to order with us?</p>
 
-            <input type="checkbox" id="officeparty" name="officeparty" value="Yes">
-            <label for="officeparty">Office Party</label><br>
+        <input type="checkbox" id="officeparty" name="officeparty" value="true">
+        <label for="officeparty">Office Party</label>
 
-            <input type="checkbox" id="milestoneevents" name="milestoneevents" value="Yes">
+            <input type="checkbox" id="milestoneevents" name="milestoneevents" value="true">
             <label for="milestoneevents">Milestone Events</label><br>
 
-            <input type="checkbox" id="achievements" name="achievements" value="Yes">
+            <input type="checkbox" id="achievements" name="achievements" value="true">
             <label for="achievements">Achievements</label><br><br>
 
             <label for="country">Country:</label>
@@ -158,7 +158,6 @@
         <br><br>
         <button onclick="getCorporateFormData()" type="button">Click to see Your Plans</button>
         <br><br>
-
         <br><br>
     </div>
 
