--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -122,14 +122,14 @@
 
             <p>Click on other interested Occasions to order with us?</p>
 
-            <input type="checkbox" id="FathersDay" name="FathersDay" value="Yes">
-            <label for="vehicle1">Fathers Day</label><br>
+            <input type="checkbox" id="fathersday" name="fathersday" value="true">
+            <label for="fathersday">Fathers Day</label><br>
 
-            <input type="checkbox" id="MothersDay" name="MothersDay" value="Yes">
-            <label for="MothersDay">Mothers Day</label><br>
+            <input type="checkbox" id="mothersday" name="mothersday" value="true">
+            <label for="mothersday">Mothers Day</label><br>
 
-            <input type="checkbox" id="Anniversary" name="Anniversary" value="Yes">
-            <label for="Anniversary">Anniversary</label><br><br>
+            <input type="checkbox" id="anniversary" name="anniversary" value="true">
+            <label for="anniversary">anniversary</label><br><br>
 
             <label for="country">Country:</label>
             <select name="country">
