Updated code  for Q4

--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -79,7 +79,6 @@
 </head>
 
 <body>
-
     <a href="corporate.html" style="color:black;">
         <span style="color:black; margin-left: 20px; margin-top: 20px; font-size:30px;cursor:pointer;">&#9664;
             Back</span>
@@ -126,8 +125,8 @@
 
             <p>Click on other interested Occasions to order with us?</p>
 
-        <input type="checkbox" id="officeparty" name="officeparty" value="true">
-        <label for="officeparty">Office Party</label>
+            <input type="checkbox" id="officeparty" name="officeparty" value="true">
+            <label for="officeparty">Office Party</label>
 
             <input type="checkbox" id="milestoneevents" name="milestoneevents" value="true">
             <label for="milestoneevents">Milestone Events</label><br>
@@ -149,6 +148,9 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+    <div class="planCard">
+        <a href="eventsdata.html"><b style="color: cadetblue;">CLICK TO SEE EVENTS DATA &#128072;</b></a>
+    </div>
 
     <div class="planCard">
         <h4>Your list of Corporate Plans</h4>
@@ -167,7 +169,7 @@
             elem.addEventListener("click", e => console.log("Capturing:", elem.tagName), true);
         }
     </script>
-
+    
     <script src="./javascript/corporate.js"></script>
 </body>
 
