--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -2,6 +2,12 @@
 <html>
 
 <head>
+    <title>Cloud 9</title>
+    <meta charset="UTF-8">
+    <!-- Included  stylesheets to maintain same header and navigation style in most of the webpages  -->
+    <link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
+
     <meta charset="utf-8" />
     <title>Cloud 9</title>
     <style>
@@ -143,6 +149,10 @@
             <input type="reset">
             <button type="submit">Submit</button>
         </form>
+    </div>
+    
+    <div class="planCard">
+        <a href="eventsdata.html"><b style="color: cadetblue;">CLICK TO SEE EVENTS DATA &#128072;</b></a>
     </div>
 
     <div class="planCard">
