--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
             </li>
 
             <li>
-                <img src="./images/50.JPG" alt="image" />
+                <img src="images/jungle1.jpg" alt="image" />
                 <div class="overlay"><span>50 Years Milestone</span></div>
             </li>
             <li>
