--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -152,7 +152,7 @@
     </div>
     
     <div class="planCard">
-        <a href="eventsdata.html"><b style="color: cadetblue;">CLICK TO SEE EVENTS DATA &#128072;</b></a>
+        <a href="login.html"><b style="color: cadetblue;">CLICK TO SEE EVENTS DATA &#128072;</b></a>
     </div>
 
     <div class="planCard">
