--- a/eventsdata.html
+++ b/eventsdata.html
@@ -2,72 +2,71 @@
 <html>
 
 <head>
-<title>Cloud 9</title>
-<meta charset="UTF-8">
-<!-- Included  stylesheets to maintain same header and navigation style in most of the webpages  -->
-<link rel="stylesheet" type="text/css"
-	href="./stylesheets/myStyleSheet.css">
-<link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
+    <title>Cloud 9</title>
+    <meta charset="UTF-8">
+    <!-- Included  stylesheets to maintain same header and navigation style in most of the webpages  -->
+    <link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
 
-<style>
-table {
-	border-collapse: collapse;
-	width: 100%;
-}
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-th, td {
-	text-align: left;
-	padding: 8px;
-}
+        th,
+        td {
+            text-align: left;
+            padding: 8px;
+        }
 
-tr:nth-child(even) {
-	background-color: #f2f2f2
-}
+        tr:nth-child(even) {
+            background-color: #f2f2f2
+        }
 
-tr:hover {
-	background-color: #ddd;
-}
+        tr:hover {
+            background-color: #ddd;
+        }
 
-th {
-	background-color: #4CAF50;
-	color: white;
-}
-</style>
+        th {
+            background-color: #4CAF50;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-	<!--Heading-->
-	<header>
-		<div class="container">
-			<img src="./images/cloud9.png" alt="Cloud 9 Logo" width="200"
-				height="120">
-			<div>
-				<h1>Cloud9 Balloon Decor</h1>
-			</div>
-		</div>
-	</header>
+    <!--Heading-->
+    <header>
+        <div class="container">
+            <img src="./images/cloud9.png" alt="Cloud 9 Logo" width="200" height="120">
+            <div>
+                <h1>Cloud9 Balloon Decor</h1>
+            </div>
+        </div>
+    </header>
 
-	<!--Navigation-->
-	<div class="navbar">
-		<a href="index.html">Home</a> <a href="gallery.html">Gallery</a>
+    <!--Navigation-->
+    <div class="navbar">
+        <a href="index.html">Home</a> <a href="gallery.html">Gallery</a>
 
-		<div class="subnav">
-			<button class="subnavbtn">Services</button>
-			<div class="subnav-content">
-				<a href="corporate.html">Corporate</a> <a href="rents.html">Rental</a>
-			</div>
-		</div>
+        <div class="subnav">
+            <button class="subnavbtn">Services</button>
+            <div class="subnav-content">
+                <a href="corporate.html">Corporate</a> <a href="rents.html">Rental</a>
+            </div>
+        </div>
 
-		<a href="prices.html">Prices</a> <a href="safety.html">Safety</a> <a
-			href="faq.html">FAQ'S</a> <a href="contact.html">Contact</a>
-	</div>
+        <a href="prices.html">Prices</a> <a href="safety.html">Safety</a> <a href="faq.html">FAQ'S</a> <a
+            href="contact.html">Contact</a>
+    </div>
 
-	<h2>
-		Corporate Events
-		</h1>
-		<table id="corporateTable"></table>
-		<script>
-            fetch('http://localhost:8081/cloudnine/corporateform/corporatelist')
+    <h2>
+        Corporate Events
+        </h1>
+        <table id="corporateTable"></table>
+        <script>
+            fetch('http://localhost:8080/corporateform/getcorporateform')
                 .then(response => response.json())
                 .then(data => {
                     const table = document.getElementById('corporateTable');
@@ -87,17 +86,15 @@ th {
                             cell.textContent = rowData[header];
 
                             // Add an event listener to each email cell
-                            if (header === 'sponsoremail') {
+                            if (header === 'sponsorEmail') {
                                 cell.addEventListener('click', () => {
                                     const email = rowData[header];
-                                    fetch(`http://localhost:8081/cloudnine/personalform/${email}`)
+                                    fetch(`http://localhost:8080/personalform/getpersonalform/${email}`)
                                         .then(response => response.json())
                                         .then(data => {
-                                            // Handle the response data here
                                             console.log(data);
-
                                             const responseTable = document.createElement('table');
-                                            const responseHeaders = Object.keys(data[0]);
+                                            const responseHeaders = ['sponsorEmail', 'planNo', 'name', 'sponsor', 'occasion', 'occasionDate', 'occasionTime', 'location', 'country', 'anniversary', 'mothersDay', 'fathersDay'];
                                             const responseHeaderRow = document.createElement('tr');
                                             responseHeaders.forEach(header => {
                                                 const th = document.createElement('th');
@@ -105,15 +102,15 @@ th {
                                                 responseHeaderRow.appendChild(th);
                                             });
                                             responseTable.appendChild(responseHeaderRow);
-                                            data.forEach(rowData => {
-                                                const row = document.createElement('tr');
-                                                responseHeaders.forEach(header => {
-                                                    const cell = document.createElement('td');
-                                                    cell.textContent = rowData[header];
-                                                    row.appendChild(cell);
-                                                });
-                                                responseTable.appendChild(row);
+                                            const rowData = Object.assign({}, data);
+                                            delete rowData.corporateEventFormEntity; // Ignore the "corporateEventFormEntity" object
+                                            const row = document.createElement('tr');
+                                            responseHeaders.forEach(header => {
+                                                const cell = document.createElement('td');
+                                                cell.textContent = rowData[header];
+                                                row.appendChild(cell);
                                             });
+                                            responseTable.appendChild(row);
                                             const responseContainer = document.getElementById('responseContainer');
                                             responseContainer.innerHTML = ''; // Clear previous table
                                             responseContainer.appendChild(responseTable);
@@ -130,46 +127,50 @@ th {
                 .catch(error => console.error(error));
         </script>
 
+        <h2>Personal Events</h2>
+        <table id="personalTable"></table>
 
-		<!--  -->
-		<h2>
-			Personal Events
-			</h1>
-			<table id="personalTable"></table>
-			<script>
-                fetch('http://localhost:8081/cloudnine/personalform/personallist')
-                    .then(response => response.json())
-                    .then(data => {
-                        const table = document.getElementById('personalTable');
-                        const headers = Object.keys(data[0]);
-                        const headerRow = document.createElement('tr');
+        <script>
+            fetch('http://localhost:8080/personalform/getpersonalform')
+                .then(response => response.json())
+                .then(data => {
+                    // Filter out the "corporateEventFormEntity" field from the data
+                    const filteredData = data.map(rowData => {
+                        const { corporateEventFormEntity, ...rest } = rowData;
+                        return rest;
+                    });
+
+                    const table = document.getElementById('personalTable');
+                    const headers = Object.keys(filteredData[0]);
+                    const headerRow = document.createElement('tr');
+                    headers.forEach(header => {
+                        const th = document.createElement('th');
+                        th.textContent = header;
+                        headerRow.appendChild(th);
+                    });
+                    table.appendChild(headerRow);
+
+                    filteredData.forEach(rowData => {
+                        const row = document.createElement('tr');
                         headers.forEach(header => {
-                            const th = document.createElement('th');
-                            th.textContent = header;
-                            headerRow.appendChild(th);
+                            const cell = document.createElement('td');
+                            cell.textContent = rowData[header];
+                            row.appendChild(cell);
                         });
-                        table.appendChild(headerRow);
-                        data.forEach(rowData => {
-                            const row = document.createElement('tr');
-                            headers.forEach(header => {
-                                const cell = document.createElement('td');
-                                cell.textContent = rowData[header];
-                                row.appendChild(cell);
-                            });
-                            table.appendChild(row);
-                        });
-                    })
-                    .catch(error => console.error(error));
-            </script>
+                        table.appendChild(row);
+                    });
+                })
+                .catch(error => console.error(error));
+        </script>
 
-			<br>
-			<h2>
-				Corporate Sponsors who planned for personal events
-				</h1>
-				<div id="responseContainer"></div>
+        <br>
+        <h2>
+            Corporate Sponsors who planned for personal events
+            </h1>
+            <div id="responseContainer"></div>
 
-				<br /> <br />
+            <br /> <br />
 </body>
 </body>
+
 </html>
-
