--- a/login.html
+++ b/login.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
-<link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/myStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
     <style>
         /* Body styling */
         body {
@@ -91,7 +91,7 @@
                 })
                     .then(response => {
                         if (!response.ok) {
-                                   alert("Authentication failed");
+                            alert("Authentication failed");
                             throw new Error('Network response was not ok');
                         }
                         return response.json();
@@ -101,7 +101,7 @@
                             alert("success");
                             window.location.href = data.redirectUrl;
                         } else {
-                            alert("failed");
+                            alert("failed" + data.message);
                             alert(data.message);
                         }
                     })
