--- a/corporateeventplanner.html
+++ b/corporateeventplanner.html
@@ -6,6 +6,12 @@
     <title>Cloud 9</title>
     <meta name="viewport" content="width=device-width">
     <style>
+        #corporatetable {
+            margin: 0 20px;
+            max-width: 100%;
+            overflow-x: auto;
+        }
+
         table {
             border-collapse: collapse;
             width: 100%;
@@ -169,7 +175,7 @@
             elem.addEventListener("click", e => console.log("Capturing:", elem.tagName), true);
         }
     </script>
-    
+
     <script src="./javascript/corporate.js"></script>
 </body>
 
