--- a/personalpartyplanner.html
+++ b/personalpartyplanner.html
@@ -11,6 +11,12 @@
     <meta charset="utf-8" />
     <title>Cloud 9</title>
     <style>
+        #personaltable {
+            margin: 0 20px;
+            max-width: 100%;
+            overflow-x: auto;
+        }
+
         table {
             border-collapse: collapse;
             width: 100%;
@@ -150,7 +156,7 @@
             <button type="submit">Submit</button>
         </form>
     </div>
-    
+
     <div class="planCard">
         <a href="login.html"><b style="color: cadetblue;">CLICK TO SEE EVENTS DATA &#128072;</b></a>
     </div>
