--- a/eventsdata.html
+++ b/eventsdata.html
@@ -9,28 +9,53 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/fonts.css">
 
     <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
+        #responseContainer {
+            margin: 0 2px;
+            max-width: 100%;
+            overflow-x: auto;
+        }
+
+        #corporateTable {
+            margin: 0 2px;
+            max-width: 100%;
+            overflow-x: auto;
+        }
+
+        #personalTable {
+            margin: 0 2px;
+            max-width: 100%;
+            overflow-x: auto;
+        }
+
+        .table-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
         }
 
         th,
         td {
-            text-align: left;
             padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2
-        }
-
-        tr:hover {
-            background-color: #ddd;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
         }
 
         th {
-            background-color: #4CAF50;
-            color: white;
+            background-color: #ae70ed;
+            /* violet color */
+            color: #fff;
+            /* white text color */
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+            /* light grey background color for even rows */
+        }
+
+        tr:hover {
+            background-color: #D8BFD8;
+            /* lavender color on hover */
         }
     </style>
 </head>
